[package]
name = "kompilator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kompilator"
path = "src/main.rs"


[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "0.20.0"